# sicss-profile-digger

./: .gitignore  README.md  image+text extract  image+text_extract.py  main.py  pyproject.toml
data/raw/: profiles.csv  profiles_2017_princeton_people.csv  profiles_2018_boulder_people.csv  profiles_2018_capetown_people.csv  profiles_2018_chicago_people.csv  profiles_2018_duke_people.csv  profiles_2018_helsinki_people.csv  profiles_2018_hunter-nyc_people.csv  profiles_2018_nyu-nyc_people.csv  profiles_2018_seattle_people.csv  profiles_2019_bamberg_people.csv  profiles_2019_boston_people.csv
src/scraping/: location_fetcher.py  profile_scraper.py
src/utils/: helper.py
